<resources>
    <string name="app_name">Medical</string>
    <string name="login">Login</string>
    <string name="login_txt">Login with your mobile</string>
    <string name="login_txt1">to get fast medicine delivery</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="get_otp">get otp</string>
    <string name="dont_acc">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="verify_num">Verify Number</string>
    <string name="verify_txt1">We have sent code on</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="prsnl_info">Personal Information</string>
    <string name="name">Name*</string>
    <string name="mobile_num_hint">Mobile Number*</string>
    <string name="age_optional">Age (Optional)</string>
    <string name="gender">Gender</string>
    <string name="optional">(Optional)</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="next">Next</string>
    <string name="add_ur_add">Add Your Address</string>
    <string name="skip">Skip</string>
    <string name="add_line1">Address Line1*</string>
    <string name="add_line2">Address Line2*</string>
    <string name="landmark">Landmark*</string>
    <string name="city">City*</string>
    <string name="city_">City</string>
    <string name="zipcode">Zip code*</string>
    <string name="upload_photoid">upload photo id</string>
    <string name="upload_img_txt">(eg. Election Card,PAN Card,Adhaar Card,Driving License)</string>
    <string name="txt_to_agree">By Register, you agree with our</string>
    <string name="terms_condtion"> <u> Terms &amp; Conditions. </u> </string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_new_order">Create New Order</string>
    <string name="by_prescription">By Prescription</string>
    <string name="make_order_prescription">Make order as prescription</string>
    <string name="cstm_order">Custom Order</string>
    <string name="order_by_product">Order by product</string>
    <string name="ur_recent_order">your recent orders</string>
    <string name="viewall">view all</string>
    <string name="you_didnt_make_any_order">You didn\'t make any Order yet</string>
    <string name="order_now">order now</string>
    <string name="sort_by">Sort by</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storecounts">Your Order Received by %s Stores, %s Stores Responded</string>
    <string name="offercounts">Below Offers are best of %s responses.</string>
    <string name="attach_prescription">Attach Prescription</string>
    <string name="save_n_continue"><![CDATA[Save & Continue]]></string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="e_prscri_folder">E-Prescription Folder</string>
    <string name="upload_img_txt1">Upload an image of your prescription provided by your doctor.</string>
    <string name="upload">Upload</string>
    <string name="set_medicine_guantity">Set Medicine Quantity</string>
    <string name="set_order_prefrnc">Set order preferences</string>
    <string name="prescription_order">Prescription Order</string>
    <string name="order_prefrnc">Order Preference</string>
    <string name="select_ur_drug_prfrnce">Select your drug preference</string>
    <string name="how_would_u_like_to_order">How would you like to order?</string>
    <string name="turn_on_location">Turn On Location</string>
    <string name="location">Location*</string>
    <string name="office_or_flatno">Office/Flat No.*</string>
    <string name="complex_or_buildingname">Complex/Building Name*</string>
    <string name="delivery_date">Delivery Date and Time</string>
    <string name="to_time">Time*</string>
    <string name="from_time">Date*</string>
    <string name="upload_ur_photoid">Upload your photo ID</string>
    <string name="street_or_road">Street/Road*</string>
    <string name="area">Area*</string>
    <string name="zip_code">Zip Code*</string>
    <string name="zip_code_">ZIP Code</string>
    <string name="ordering_for">ordering for</string>
    <string name="review_order">Review Order</string>
    <string name="store_name">Store Name*</string>
    <string name="final_order">Final Order</string>
    <string name="send_to_store">Send to store</string>
    <string name="send_to_platform">send to platform</string>
    <string name="send_to_market">send to market</string>
    <string name="edit">Edit</string>
    <string name="from_delivery_date">From Delivery Date and Time</string>
    <string name="deliveryDate">Delivery Date and Time</string>
    <string name="delivery_time">To Delivery Date and Time</string>
    <string name="deliveryTime">Delivery Date and Time</string>
    <string name="prefer_schedule">Preferred Schedule</string>
    <string name="delivery_prefrnc">Delivery Preference</string>
    <string name="txt_only_after">You can Reorder this Prescription only after</string>
    <string name="txt_only_after_custom">You can Reorder this Custom Order only after</string>
    <string name="re_order">re-order</string>
    <string name="reorder">Re Order</string>
    <string name="code">Code:</string>
    <string name="find_store">Find Store</string>
    <string name="search_txt">Search by name, category,  zip code, address</string>
    <string name="send_ordr_to_this_stor">send order to this store</string>
    <string name="other_info">Other Information</string>
    <string name="ownr_nm">Owner Name</string>
    <string name="gst_no">GST Number</string>
    <string name="drug_licns_no">Drug License Number</string>
    <string name="mrchndiz_category">Merchandise Category</string>
    <string name="mrchndiz_category_select">Confirm Merchandise Category</string>
    <string name="establis_since">Established Since</string>
    <string name="geo_location">Geo Location</string>
    <string name="prefrd_paymnt">Preferred Payment</string>
    <string name="search_filtr">Select your Stores</string>
    <string name="txt_chkbox1">Nearest Store to My Location</string>
    <string name="txt_chkbox2">Nearest Store to My Delivery Location</string>
    <string name="select_location_critria">Select by Location Criteria</string>
    <string name="select_stor_criteria">Select by Store Criteria</string>
    <string name="active_status">Active</string>
    <string name="type">Type</string>
    <string name="back_t_dashboard">Back to Dashboard</string>
    <string name="ordr_success_txt1">This Order can be uploaded again only after 24 hrs.</string>
    <string name="ordr_success_txt">This order has been sent to the store and the store offer is awaited.</string>
    <string name="ordr_success_txt_one">This order has been sent to the market and best offers are awaited.</string>
    <string name="ordr_success">Order Successful</string>
    <string name="txt_full_cvrage_ofer">Best Full Coverage Offers</string>
    <string name="txt_partial_cvrage_ofer">Best Partial Coverage Offers</string>
    <string name="txt_full_cvrg_ofer">Check offer with Full Fill</string>
    <string name="txt_partial_cvrg_ofer">Check offer with Partial Fill</string>
    <string name="view_order">View Order</string>
    <string name="buying_prefrnc">Buying Preference</string>
    <string name="best_in_price">Best in Price</string>
    <string name="best_in_delivery">Best in Delivery</string>
    <string name="view_offer"><![CDATA[View Offer >>]]></string>
    <string name="full_cvrage">Full Coverage</string>
    <string name="txt_reorder">Re-Order</string>
    <string name="accept">Accept</string>
    <string name="txt_befor_confrm_order">You will see store details after store confirm your order</string>
    <string name="txt_order_confirmed">Your order has been confirmed</string>
    <string name="view_store_invoice">View Store Invoice</string>
    <string name="track_ordr_mak_paymnt"><![CDATA[Track Order & Make Payment]]></string>
    <string name="txt_view_order">View Order</string>
    <string name="view_offer_">View Offer</string>
    <string name="order_offer">Order Offer</string>
    <string name="orignl_prescrption_requird">Original Prescription Required</string>
    <string name="delivery_date_time">Delivery Date/Time</string>
    <string name="order_amount">Order Amount</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="mrp">MRP</string>
    <string name="txt_inclusiv_taxes">(Inclusive of all Taxes &amp; Duties)</string>
    <string name="net_bill_amount">Net Bill Amount</string>
    <string name="delivery_charges">(+) Delivery Charges</string>
    <string name="if_any">(if any)</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="download_invoice">Invoice Downloaded</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="receivr_verified">Receiver Verified</string>
    <string name="paymnt_verified">Payment Verified</string>
    <string name="order_received">Order Received</string>
    <string name="rate_store">Rate Store</string>
    <string name="zip_add_delivery">ZIP Address Delivery</string>
    <string name="make_payment">Make Payment</string>
    <string name="choose_ur_paymnt_option">Choose your payment option</string>
    <string name="view_invoice">View Invoice</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="google_pay">GooglePay</string>
    <string name="phonepe">PhonePe</string>
    <string name="paytm">Paytm</string>
    <string name="paymnt_successful">Payment Successful</string>
    <string name="txt_invoice_msg">You will be handed over the store invoice at the time of delivery.</string>
    <string name="invoice">Invoice</string>
    <string name="submit_review">Submit Review</string>
    <string name="write_ur_review">Write your Review</string>
    <string name="bad">Bad</string>
    <string name="meh">Meh</string>
    <string name="nice">Nice</string>
    <string name="good">Good</string>
    <string name="great">Great!</string>
    <string name="rate_ur_expi">Rate your Experience</string>
    <string name="call">Call</string>
    <string name="my_rating">My Rating</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="by_type">By Type</string>
    <string name="by_status">By Status</string>
    <string name="by_store_name">By Store Name</string>
    <string name="by_city">By City</string>
    <string name="by_area">By Area</string>
    <string name="by_zip_code">By Zip Code</string>
    <string name="by_offer">By Offer</string>
</resources>