<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nested_location_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/register_bg"
            tools:context=".loginactivities.RegisterActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/con_toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:padding="@dimen/dp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/circularstd_bold"
                android:text="@string/prsnl_info"
                android:textAllCaps="true"
                android:textColor="@color/black_txt"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/con_toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/circularstd_book"
                android:text="1/3"
                android:textColor="@color/grey_txt"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_40"
                android:background="@drawable/input_box"
                android:fontFamily="@font/circularstd_book"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:paddingStart="@dimen/dp_30"
                android:paddingEnd="@dimen/dp_30"
                android:textColorHint="@color/grey_txt"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_count" />

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_mobil_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/input_box"
                android:fontFamily="@font/circularstd_book"
                android:hint="@string/mobile_num_hint"
                android:inputType="number"
                android:maxLength="10"
                android:paddingStart="@dimen/dp_30"
                android:paddingEnd="@dimen/dp_30"
                android:textColorHint="@color/grey_txt"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_name" />


        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/txt_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/input_box"
                android:fontFamily="@font/circularstd_book"
                android:hint="@string/age_optional"
                android:inputType="number"
                android:maxLength="3"
                android:paddingStart="@dimen/dp_30"
                android:paddingEnd="@dimen/dp_30"
                android:textColorHint="@color/grey_txt"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_mobil_num" />


        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_20" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_20" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:fontFamily="@font/circularstd_book"
                android:text="@string/gender"
                android:textColor="@color/grey_txt"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_age" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:fontFamily="@font/circularstd_book"
                android:text="@string/optional"
                android:textColor="@color/grey_txt"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBaseline_toBaselineOf="@+id/txt_gender"
                app:layout_constraintStart_toEndOf="@+id/txt_gender" />

        <RadioButton
                android:id="@+id/radiobutton_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/dp_12"
                android:button="@drawable/custom_radiobutton"
                android:fontFamily="@font/circularstd_book"
                android:text="@string/female"
                android:textColor="@color/grey_txt"
                app:layout_constraintBottom_toTopOf="@+id/btn_next"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/txt_gender"
                app:layout_constraintVertical_bias="0.0" />

        <RadioButton
                android:id="@+id/radiobutton_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="@dimen/dp_12"
                android:button="@drawable/custom_radiobutton1"
                android:fontFamily="@font/circularstd_book"
                android:text="@string/male"
                android:textColor="@color/grey_txt"
                app:layout_constraintBottom_toTopOf="@+id/btn_next"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintHorizontal_bias="0.09"
                app:layout_constraintStart_toEndOf="@+id/radiobutton_f"
                app:layout_constraintTop_toBottomOf="@+id/txt_gender"
                app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>